<resources>
    <string name="app_name">P11 PS Movies</string>
    <string name="movie_title">Movie Title</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="ratings">Ratings</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show List</string>
    <string name="enter_movie_title_here">Enter movie title here</string>
    <string name="enter_genre_here">Enter Genre here</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="show_all_movies">Show All Movies</string>
    <string name="movie_id">Movie ID</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="enter_movie_id_here">Enter Movie ID Here</string>
    <string name="insert_movies">Insert Movies</string>
    <string name="rating">Rating</string>
    <string-array name="spinnerItems">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>