<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#69AADD"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="casual"
        android:text="@string/movie_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enter_movie_id_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:focusable="false"
        android:clickable="false"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="casual"
        android:text="@string/movie_title"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enter_movie_title_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="casual"
        android:text="@string/genre"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enter_genre_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="casual"
        android:text="@string/year"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enter_year_of_release_here"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="casual"
        android:text="@string/ratings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/update"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:backgroundTint="#319105"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:backgroundTint="#7E3E3E" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:backgroundTint="#60AF41"
        tools:ignore="TextContrastCheck" />

</LinearLayout>